7/20/2006 - jdiamond
====================

 * Added a "contact registrar" button to the edit/renew domain page
 * (trac #21, #71) The billing & invoices code was cleaned up and a few bugs relating to past purchases being 
   billed correctly were fixed.

7/15/2006 - jdiamond
====================

 * (trac #23) Add sub-total and tax-total to invoices.

7/14/2006 - jdiamond
====================

 * (trac #73) Fixed a foreach() warning that resulted when deleting invoices.
 * (trac #64) Fixed a bug that was causing empty invoices to be generated in batch.
 * (trac #87) Fixed a database bug that was truncating tax rule's > 9.99%
 * Moved the database SQL from manager/db/ to sql/
 * (trac #74) Replaced hard-coded $ symbols in the printed/e-mail invoice
 * (trac #25) Fixed a number of hard-coded english phrases

7/13/2006 - jdiamond
====================

 * (trac #60) Completed work on an Authorize.net module.
 * Fixed an undocumented bug involving invalid payment type's when receiving a payment manually

7/8/2006 - jdiamond
====================

 * Add a "Null Registrar" module to be used when the HSP is using a domain registrar that is not supported
 * Support for domain transfers and domain renewals
 * Completed all major functions of the Order interface.  Minor touch-ups remain.

 *** PLEASE NOTE: this commit contains a new database scheme ***

6/29/2006 - jdiamond
====================

 * (trac #15) Removed new-lines from the end of PHP files and converted files with DOS new-lines to Unix.

6/26/2006 - jdiamond
====================

 * (trac #63) Bundled Smarty with SolidWorks

 *** PLEASE NOTE: this commit contains a new database scheme ***

6/8/2006 - jdiamond
====================

 * Support for Payment Processor modules

 * A Paypal Web Payments Standard module

 * Complete checkout process for the Order interface

 *** PLEASE NOTE: this commit contains a new database scheme ***

5/29/2006 - jdiamond
====================

 * Implemented a new Modules framework.
